Fix z-index issue

--- a/benchmarks/style.css
+++ b/benchmarks/style.css
@@ -62,6 +62,7 @@ details {
 #carbonads {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
     'Helvetica Neue', Helvetica, Arial, sans-serif;
+  z-index: 0;
 }
 #carbonads {
   display: flex;
